--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
-Hello World
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" charset="utf-8"></script>
+    <script src="app.js" charset="utf-8"></script>
+    <link rel="stylesheet" href="main.css" />
+
+
+    <title>The Car Game!!</title>
+   
+</head>
+
+<body>
+    <h1>The Car Game!!</h1>
+    <div id="main">
+        <div id="enemy"></div>
+            <div id="blue-car"></div>
+            <div id="green-car"></div>
+            <div id="pink-car"></div>
+            <div id="yellow-car"></div>
+        <div id="red-car">
+      
+        </div>
+        <div id ="score">Score</div>
+
+
+    </div>
+
+</body>
+
+</body>
+
+</html>
