--- a/index.html
+++ b/index.html
@@ -12,27 +12,35 @@
 
 
     <title>The Car Game!!</title>
-   
+  
 </head>
+
+
 
 <body>
     <h1>The Car Game!!</h1>
+    <div id ="popup">
+        <input type="text" id="name" placeholder="Create a Nickname (Max:5 Char)" maxlength="5">
+ 
+        <button id="start-game">Start Game</button>
+    </div>
+
     <div id="main">
+
         <div id="enemy"></div>
             <div id="blue-car"></div>
             <div id="green-car"></div>
             <div id="pink-car"></div>
             <div id="yellow-car"></div>
-        <div id="red-car">
-      
-        </div>
-        <div id ="score">Score</div>
+        <div id="red-car"></div>
+        <div id ="score">Your Score</div>
+        <div id="high-scores"><h2>High Score</h2></div>
 
 
     </div>
-
+   
 </body>
 
-</body>
+
 
 </html>
